--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <form (ngSubmit)="onSubmit(myform,myform.value)" #myform="ngForm">
 
         <div ngModelGroup="personDetails" #personDetail="ngModelGroup" >
-            <label for="fname">First Name</label>
+            <label for="fname">First Name Name</label>
             <input type="text" id="fname" placeholder="Your name.." name="firstname" ngModel required #fname="ngModel"
 >
             <div>
